# CFL

./: .clang-format  .clang-tidy  .travis.yml  CMakeLists.txt  PVS-Studio.cfg  README.md  appveyor.yml  ctest_build.cmake
applications/: CMakeLists.txt  matrixfree_data.h  matrixfree_laplace.cc  matrixfree_laplace_dg.cc  matrixfree_laplace_dg2.cc  matrixfree_mass.cc  matrixfree_negative.cc  matrixfree_negative_scalar.cc  matrixfree_nonlinear.cc  matrixfree_schloegl.cc  matrixfree_stokes.cc  meshworker_data.h  meshworker_laplace.cc  multigrid.cc.tmp  print_matrixfree_laplace_dg.cc  reorder_forms.cc  step-37.cc
applications/latex/: CMakeLists.txt
applications/matrixfree/: matrixfree_data.h  matrixfree_laplace.cc  matrixfree_laplace_dg.cc  matrixfree_laplace_dg2.cc  matrixfree_mass.cc  matrixfree_negative.cc  matrixfree_negative_scalar.cc  matrixfree_nonlinear.cc  matrixfree_schloegl.cc  matrixfree_stokes.cc  schloegl.cc  step-37.cc
applications/meshworker/: CMakeLists.txt  meshworker_data.h  meshworker_laplace.cc
cfl/: cfl.h  constants.h  dealii.h  dealii_loop.h  dealii_matrixfree.h  dealii_meshworker.h  derivatives.h  forms.h  products.h  static_for.h  sums.h  terminal_strings.h  traits.h
cmake/: macro_add_test.cmake  macro_pickup_tests.cmake
dealii/: CMakeLists.txt  README_MatrixFree  fe_data.h  fefunctions.cc  matrix_free_integrator.h  matrixfree_data.h  matrixfree_laplace.cc  matrixfree_laplace_dg.cc  matrixfree_mass.cc  matrixfree_negative.cc  matrixfree_negative_scalar.cc  matrixfree_nonlinear.cc  matrixfree_schloegl.cc  matrixfree_stokes.cc  meshworker_data.h  meshworker_laplace.cc  operators.h  print_matrixfree_laplace_dg.cc  schloegl.cc  step-37.cc  test_fe_data.cc
dealii/tests/: CMakeLists.txt  matrixfree_laplace.cc  matrixfree_laplace.output  matrixfree_mass.cc  matrixfree_mass.output  matrixfree_negative.cc  matrixfree_negative.output  matrixfree_negative_scalar.cc  matrixfree_negative_scalar.output  matrixfree_nonlinear.cc  matrixfree_nonlinear.output  meshworker_laplace.cc  meshworker_laplace.output  test_fe_data.h  test_fe_data_1.cc  test_fe_data_2.cc  test_fe_data_3.cc  test_fe_data_4.cc  test_fe_data_5.cc  test_matrixfree.h  test_matrixfree_1.cc  test_matrixfree_2.cc  test_matrixfree_3.cc  test_matrixfree_4.cc  test_matrixfree_5.cc  test_matrixfree_6.cc  test_utils.h
doc/: CMakeLists.txt  options.dox.in
include/: constants.h  contract.h  derivatives.h  forms.h  inner_product.h  products.h  sums.h  terminal_strings.h  traits.h  transpose.h
include/cfl/: fefunctions.h  forms.h  products.h  sums.h  traits.h  transpose.h
include/cfl/base/: constants.h  fefunctions.h  forms.h  products.h  sums.h
include/cfl/latex/: fefunctions.h  forms.h
include/cfl/matrixfree/: fe_data.h  fefunctions.h  forms.h  matrix_free_integrator.h
include/cfl/meshworker/: fefunctions.h  forms.h
include/latex/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  arithmetic  arithmetic.cc.original  arithmetic.plog  build.ninja  cfllatex.cbp  cmake_install.cmake  derivatives  derivatives.plog  errors  evaluator.h  fefunctions.h  fefunctions.h.original  forms  forms.h  forms.plog  log  rules.ninja  strace_out  terminals  terminals.plog
include/latex/PVS-Studio/: arithmetic.cc.plog  derivatives.cc.plog  forms.cc.plog  terminals.cc.plog
include/matrixfree/: fe_data.h  fefunctions.h  forms.h  matrix_free_integrator.h
include/meshworker/: fefunctions.h  forms.h
latex/: CMakeLists.txt  arithmetic.cc  derivatives.cc  evaluator.h  fefunctions.h  forms.cc  terminals.cc  wrap.tex
sources/base/: fefunctions.cc  forms.cc  products.cc  sums.cc  traits.cc
sources/cfl/: fefunctions.cc  forms.cc  products.cc  sums.cc  traits.cc
sources/latex/: evaluator.cc  fefunctions.cc  forms.cc
sources/matrixfree/: fe_data.cc  fefunctions.cc  forms.cc  matrix_free_integrator.cc
sources/meshworker/: fefunctions.cc  forms.cc
tests/: CMakeLists.txt  arithmetic.cc  arithmetic.output  derivatives.cc  fefunctions.cc  fefunctions.output  forms.cc  matrixfree_data.h  matrixfree_laplace.cc  matrixfree_laplace.output  matrixfree_mass.cc  matrixfree_negative.cc  matrixfree_negative.output  matrixfree_negative_scalar.cc  matrixfree_nonlinear.cc  meshworker_data.h  meshworker_laplace.cc  meshworker_laplace.output  terminals.cc  test_fe_data.h  test_fe_data_1.cc  test_fe_data_2.cc  test_fe_data_5.cc  test_matrixfree.h  test_matrixfree_2.cc  test_matrixfree_3.cc  test_matrixfree_4.cc  test_matrixfree_4.output  test_matrixfree_5.cc  test_matrixfree_6.cc
tests/latex/: CMakeLists.txt  arithmetic.cc  arithmetic.output  derivatives.cc  derivatives.output  fefunctions.cc  fefunctions.output  forms.cc  forms.output  print_matrixfree_laplace_dg.cc  print_matrixfree_laplace_dg.output  print_optimize.cc  print_optimize.output  terminals.cc  terminals.output
tests/matrixfree/: CMakeLists.txt  matrixfree_data.h  matrixfree_laplace.cc  matrixfree_mass.cc  matrixfree_negative.cc  matrixfree_negative_scalar.cc  matrixfree_nonlinear.cc  matrixfree_nonlinear.output  test_fe_data.h  test_matrixfree.h  test_matrixfree_1.cc  test_matrixfree_3.cc  test_matrixfree_5.cc
tests/meshworker/: CMakeLists.txt  meshworker_data.h  meshworker_laplace.cc  meshworker_laplace.output
tests/support/: CMakeLists.txt
tests/support/include/boost/mpl/: assert.hpp
tests/support/include/boost/test/data/monomorphic/: generate.hpp
tests/support/include/boost/test/utils/runtime/cla/: parser.hpp
tests/support/libs/boost/test/src/: .ninja_deps  .ninja_log  build.ninja  cmake_install.cmake  rules.ninja
tools/: PVS-Studio.cmake  fix_constexpr.sh  rm_empty.sh  rm_single.sh  run_clang-tidy.sh  static_analyze
unused/: cfl.h  constants.h  contract.h  mg_transfer.h  mg_transfer_matrix_free.h  products.h  solution.h
